--- a/main-dashboard.html
+++ b/main-dashboard.html
@@ -10,7 +10,7 @@
      <!--Icons-->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
-    <title>Dashboard</title>
+    <title>Main Dashboard</title>
     <link rel="stylesheet" href="main-dashboard.css">
 </head>
 <body>
