--- a/Orderlist.html
+++ b/Orderlist.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="orderlist.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <title>CRUD</title>
+    <title>Sales order</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
