--- a/items.html
+++ b/items.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="orderlist.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <title>Customers</title>
+    <title>Items</title>
     <link rel="stylesheet" href="items.css">
 </head>
 <body>
