--- a/items.html
+++ b/items.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="orderlist.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <title>Items</title>
+    <link rel="shortcut icon" type="x-icon" href="images/logo.png">
     <link rel="stylesheet" href="items.css">
 </head>
 <body>
